test/compile_error/typemismatch.conf.1.def
config type_mismatch_conf {
	foo : int = "hoge";
}
